# AID

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
classes/: RIG_original.py
classes/agent/: agent_rigtree.py
classes/env/: Gaussian2D.py  env.py  gp_ipp.py
classes/prm/: PRMController.py
classes/util/: predictor.py  utils.py
config/dataset/: dataset_maipp_gpipp_delta.yaml  dataset_rigtree_gpipp_delta.yaml
config/eval/: eval_ft_ppo_diffusion_unet_gpipp_delta_maippdata.yaml  eval_ft_ppo_diffusion_unet_gpipp_delta_rigtreedata.yaml  eval_maipp_gpipp.yaml  eval_pre_diffusion_unet_gpipp_delta_maippdata.yaml  eval_pre_diffusion_unet_gpipp_delta_rigtreedata.yaml  eval_rigtree_gpipp.yaml
config/finetune/: ft_ppo_diffusion_unet_gpipp_delta_maippdata.yaml  ft_ppo_diffusion_unet_gpipp_delta_rigtreedata.yaml
config/pretrain/: pre_diffusion_unet_gpipp_delta_maippdata.yaml  pre_diffusion_unet_gpipp_delta_rigtreedata.yaml
config/rl/: rl_ppo_maipp_gpipp.yaml
execution/driver/: dataset_driver.py  driver.py  eval_driver.py  ft_driver.py  rl_driver.py
execution/runner/: dataset_runner.py  eval_runner.py  ft_runner.py  rl_runner.py  runner.py
execution/worker/: dataset_maipp_worker.py  dataset_rigprm_worker.py  dataset_rigtree_worker.py  eval_diffusion_worker.py  eval_maipp_worker.py  eval_rigtree_worker.py  ft_diffusion_worker.py  rl_maipp_worker.py
logs/finetune/gp_ipp_delta_ft_diffusion_unet_img_tp8_ta2_td20_tdf10/ft_maippdata/: config.yaml
logs/finetune/gp_ipp_delta_ft_diffusion_unet_img_tp8_ta2_td20_tdf10/ft_rigtreedata/: config.yaml
logs/rl/gp_ipp_rl_ppo_maipp/intentmaipp/: config.yaml
model/common/: AttentionNet.py  critic.py
model/diffusion/: diffusion.py  diffusion_vpg.py  eta.py  unet.py
script/: run.py
train/pretrain/: train_agent.py  train_diffusion_agent.py
(+2 files in other folders)
