[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aid_maipp"
version = "1.0.0"
description = "AID: Agent Intent from Diffusion for Multi-Agent Informative Path Planning"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
	{ name = "marmotlab" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
    "torch==2.4.0",
    "numpy",
    "imageio",
    "scipy",
    "scikit-learn",
    "shapely",
    "matplotlib",
    "tqdm",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "einops",
    "ray",
    "wandb",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
