[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aid_maipp"
version = "1.0.0"
description = "AID: Agent Intent from Diffusion for Multi-Agent Informative Path Planning"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
	{ name = "marmotlab" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
    "torch==2.4.0",
    "numpy==2.3.5",
    "imageio==2.37.2",
    "scipy==1.16.3",
    "scikit-learn==1.7.2",
    "shapely==2.1.2",
    "matplotlib==3.10.7",
    "tqdm==4.67.1",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "einops==0.8.1",
    "ray==2.52.1",
    "wandb==0.23.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
